UserController Swagger
