# app/Http/Controllers/UserController.php
@@ -11,34 +11,146 @@ use Illuminate\Support\Facades\Validator;
 class UserController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *     path="/api/users",
+     *     summary="Felhasználók lekérése",
+     *     description="Az összes felhasználó lekérése",
+     *     tags={"Felhasználók"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Sikeres lekérés esetén a felhasználók adatai",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(
+     *                 @OA\Property(property="id", type="integer"),
+     *                 @OA\Property(property="username", type="string"),
+     *                 @OA\Property(property="email", type="string"),
+     *                 @OA\Property(property="city", type="string"),
+     *                 @OA\Property(property="password", type="string"),
+     *                 @OA\Property(property="profilePictureURL", type="string"),
+     *                 @OA\Property(property="verificationToken", type="string"),
+     *                 @OA\Property(property="isVerified", type="boolean"),
+     *                 @OA\Property(property="passwordResetToken", type="string"),
+     *             ),
+     *         ),
+     *     ),
+     * )
      */
     public function index()
     {
         $users = User::all();
         return response()->json($users);
     }
-
-    public function show(User $user)
+    /**
+     * @OA\Get(
+     *     path="/api/users/{id}",
+     *     summary="Felhasználó lekérése",
+     *     description="Felhasználó adatainak lekérése azonosító alapján",
+     *     tags={"Felhasználók"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="A felhasználó azonosítója",
+     *         @OA\Schema(type="integer"),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Sikeres lekérés esetén a felhasználó adatai",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer"),
+     *                 @OA\Property(property="username", type="string"),
+     *                 @OA\Property(property="email", type="string"),
+     *                 @OA\Property(property="city", type="string"),
+     *                 @OA\Property(property="password", type="string"),
+     *                 @OA\Property(property="profilePictureURL", type="string"),
+     *                 @OA\Property(property="verificationToken", type="string"),
+     *                 @OA\Property(property="isVerified", type="boolean"),
+     *                 @OA\Property(property="passwordResetToken", type="string"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Nem található felhasználó az adott azonosítóval",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="error", type="string"),
+     *         ),
+     *     ),
+     * )
+     */
+    public function show($userId)
     {
-        $user = User::find($user->id);
+        $user = User::find($userId);
         if ($user == null) {
-
-            return response()->json(['message' => 'Nincs ilyen azonosítójú felhasználó'], 404);
+            return response()->json(['error' => 'Nem található felhasználó az adott azonosítóval'], 404);
         } else {
             return response()->json($user);
         }
     }
-
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     *     path="/api/users/{id}",
+     *     summary="Felhasználó frissítése",
+     *     description="Felhasználó adatainak frissítése azonosító alapján",
+     *     tags={"Felhasználók"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="A felhasználó azonosítója",
+     *         @OA\Schema(type="integer"),
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="A frissítendő felhasználó adatai",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="password", type="string", format="password"),
+     *             @OA\Property(property="profilePictureURL", type="string"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Sikeres frissítés esetén a frissített felhasználó adatai",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer"),
+     *                 @OA\Property(property="username", type="string"),
+     *                 @OA\Property(property="email", type="string"),
+     *                 @OA\Property(property="city", type="string"),
+     *                 @OA\Property(property="password", type="string"),
+     *                 @OA\Property(property="profilePictureURL", type="string"),
+     *                 @OA\Property(property="verificationToken", type="string"),
+     *                 @OA\Property(property="isVerified", type="boolean"),
+     *                 @OA\Property(property="passwordResetToken", type="string"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Hibás kérés esetén a validációs hibaüzenetek",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="error", type="object"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Nem található felhasználó az adott azonosítóval",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string"),
+     *         ),
+     *     ),
+     * )
      */
-    public function update(Request $request, User $user)
+    public function update(Request $request, $userId)
     {
         $data = $request->all();
 
         $rules = [
-            'username' =>'unique:users|min:6',
+            'username' => 'unique:users|min:6',
             'email' => 'email|unique:users',
             'password' => 'string|min:8|regex:/^(?=.*[A-Z])(?=.*[0-9])/'
         ];
@@ -52,45 +164,110 @@ class UserController extends Controller
             'password.regex' => 'A jelszónak legalább egy nagybetűt és egy számot kell tartalmaznia'
         ];
 
-        $user = User::find($user->id);
+        $user = User::find($userId);
         if (!$user) {
 
             return response()->json(['message' => 'Nincs ilyen felhasználó'], 404);
-        } else{
+        } else {
             $validator = Validator::make($data, $rules, $messages);
 
-        if ($validator->fails()) {
-            $errors = $validator->errors();
-            return response ()->json(['error' => $errors], 400);
-        } else {
-            $request['password'] = bcrypt($request->password);
-            $user->update($request->all());
-            return response()->json($user, 200);
-    }
+            if ($validator->fails()) {
+                $errors = $validator->errors();
+                return response()->json(['error' => $errors], 400);
+            } else {
+                $request['password'] = bcrypt($request->password);
+                $user->update($request->all());
+                return response()->json($user, 200);
+            }
         }
     }
-
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *     path="/api/users/{id}",
+     *     summary="Felhasználó törlése",
+     *     description="Felhasználó törlése azonosító alapján",
+     *     tags={"Felhasználók"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="A felhasználó azonosítója",
+     *         @OA\Schema(type="integer"),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Sikeres törlés esetén a törlés visszaigazolása",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Nem található felhasználó az adott azonosítóval",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="error", type="string"),
+     *         ),
+     *     ),
+     * )
      */
-    public function destroy(User $user)
+    public function destroy($userId)
     {
-        $user = User::find($user->id);
+        $user = User::find($userId);
 
         if (!$user) {
-            return response()->json(['message'=> 'No user found'], 404);
+            return response()->json(['error' => 'Nincs ilyen felhasználó'], 404);
         } else {
             $user->delete();
             return response()->json(["message" => "Felhasználó törölve"], 200);
         }
     }
-
+    /**
+     * @OA\Get(
+     *     path="/api/users/username/{username}",
+     *     summary="Felhasználó megkeresése a felhasználónév alapján",
+     *     description="Felhasználó megkeresése a felhasználónév alapján",
+     *     tags={"Felhasználók"},
+     *     @OA\Parameter(
+     *         name="username",
+     *         in="path",
+     *         required=true,
+     *         description="A felhasználó felhasználóneve",
+     *         @OA\Schema(type="string"),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Sikeres lekérés esetén a felhasználó adatai",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer"),
+     *                 @OA\Property(property="username", type="string"),
+     *                 @OA\Property(property="email", type="string"),
+     *                 @OA\Property(property="city", type="string"),
+     *                 @OA\Property(property="password", type="string"),
+     *                 @OA\Property(property="profilePictureURL", type="string"),
+     *                 @OA\Property(property="verificationToken", type="string"),
+     *                 @OA\Property(property="isVerified", type="boolean"),
+     *                 @OA\Property(property="passwordResetToken", type="string"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Nem található felhasználó az adott felhasználónévvel",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="error", type="string"),
+     *         ),
+     *     ),
+     * )
+     */
     public function getUserByUsername($username)
     {
         $user = User::where('username', $username)->first();
         if ($user == null) {
 
-            return response()->json(['message' => 'Nincs ilyen nevű felhasználó'], 404);
+            return response()->json(['error' => 'Nincs ilyen nevű felhasználó'], 404);
         } else {
             return response()->json($user);
         }
